--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-flask
-torchvision
-pillow
+-f https://download.pytorch.org/whl/torch_stable.html
+Pillow==1.11.0+cpu
+torch==1.10.1+cpu
+torchvision==0.11.2+cpu
+gunicorn==20.1.0
