--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 -f https://download.pytorch.org/whl/torch_stable.html
-Pillow==1.11.0+cpu
-torch==1.10.1+cpu
-torchvision==0.11.2+cpu
+Pillow==9.0.0
+torch==1.11.0+cpu
+torchvision==0.12.0+cpu
 gunicorn==20.1.0
